--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   padding: 2rem;
   text-align: center;
 }
-
+.logo-container {
+  min-height: 150px;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -16,6 +18,9 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+.btn {
+  min-width: 150px;
 }
 
 @keyframes logo-spin {
